@@ -2,6 +2,7 @@
 
 ## Version 5.5.6
 
+* Fixing #485 Cannot Restore Queue Containing HDR10+ Entries (thanks to Maddie Davis)
 * Fixing #487 Filename corrupted on path change (thanks to Maddie Davis)
 * Fixing #491 Can't open Setting in Chinese upgraded from old version (thanks to 谈天才)
 * Fixing #493 Profiles did not load config for remove hdr, remove metadata or copy chapter toggles (thanks to micron888)
